034 Pinball - Physics Interactions

--- a/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -125,17 +125,17 @@ PaperRuntimeSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings.Charge Plunger,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,PhysicsSettings.Physical Surface.PhysicalSurfaceList,
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings.Charge Plunger,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,PhysicsSettings.Physical Surface.PhysicalSurfaceList,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings.Charge Plunger,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,PhysicsSettings.Physical Surface.PhysicalSurfaceList,
+PhysicsConstraintComponent=PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,
 
 [EditorStartup]
 LastLevel=/Game/Maps/Main_Map
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Plunger_BP.Plunger_BP
-OpenAssetsAtExit=/Game/Blueprints/BallSphere_BP.BallSphere_BP
-OpenAssetsAtExit=/Game/Blueprints/GameMode_BP.GameMode_BP
-OpenAssetsAtExit=/Game/Blueprints/PlayerController_BP.PlayerController_BP
-OpenAssetsAtExit=/Game/Blueprints/Bumper_BP.Bumper_BP
+OpenAssetsAtExit=/Game/Assets/StaticMesh/SM_LBracket.SM_LBracket
+OpenAssetsAtExit=/Game/Assets/StaticMesh/SM_SpinnerTile.SM_SpinnerTile
+OpenAssetsAtExit=/Game/Blueprints/GameObjects/Spinner_BP.Spinner_BP
+OpenAssetsAtExit=/Game/Blueprints/GameObjects/BallSphere_BP.BallSphere_BP
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -578,6 +578,61 @@ PlayerController_BP_C.Actor=True
 K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.LodSettings=True
+FbxImportUI.Material=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
+Rail_BP_C.Tick=True
+Rail_BP_C.Default=True
+Rail_BP_C.Rendering=True
+Rail_BP_C.Replication=True
+Rail_BP_C.Input=True
+Rail_BP_C.Actor=True
+Spinner_BP_C.Tick=True
+Spinner_BP_C.Rendering=True
+Spinner_BP_C.Replication=True
+Spinner_BP_C.Input=True
+Spinner_BP_C.Actor=True
+PhysicsConstraintComponent.Variable=True
+PhysicsConstraintComponent.TransformCommon=True
+PhysicsConstraintComponent.Sockets=True
+PhysicsConstraintComponent.Rendering=True
+PhysicsConstraintComponent.Constraint=True
+PhysicsConstraintComponent.Constraint Behavior=True
+PhysicsConstraintComponent.Linear Limits=True
+PhysicsConstraintComponent.Angular Limits=True
+PhysicsConstraintComponent.Tags=True
+PhysicsConstraintComponent.ComponentReplication=True
+PhysicsConstraintComponent.LinearMotor=True
+PhysicsConstraintComponent.AngularMotor=True
+PhysicsConstraintComponent.Cooking=True
+PhysicsConstraintComponent.Events=True
+ArrowComponent.Variable=True
+ArrowComponent.TransformCommon=True
+ArrowComponent.Sockets=True
+ArrowComponent.ArrowComponent=True
+ArrowComponent.Rendering=True
+ArrowComponent.Tags=True
+ArrowComponent.ComponentReplication=True
+ArrowComponent.Cooking=True
+ArrowComponent.Events=True
+Spinner_BP_C.TransformCommon=True
+Brush.TransformCommon=True
+Brush.Surface Materials=True
+Brush.Geometry=True
+Brush.Surface Properties=True
+Brush.BrushSettings=True
+Brush.Actor=True
+LightmassPrimitiveSettingsObject.Lightmass=True
+BallSphere_BP_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" "
@@ -601,6 +656,11 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoR
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.Preview.PreviewMeshes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" "
+PhysicsConstraintComponent="\"Object.Constraint.ComponentName2\" "
+SceneComponent=
+ActorComponent=
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Sounds/victoryMusic_loop_01_01.victoryMusic_loop_01_01=0
@@ -614,6 +674,8 @@ AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation
 /Game/Assets/Sounds/SP08_Convoy_Chase_exp.SP08_Convoy_Chase_exp=1
 /Game/Assets/Sounds/Pinball_Rolling01.Pinball_Rolling01=0
 /Game/Assets/Sounds/Pinball_Rolling01_Cue.Pinball_Rolling01_Cue=0
+/Game/Blueprints/GameObjects/Rail_BP.Rail_BP=0
+/Game/Assets/StaticMesh/SM_BracketTop.SM_BracketTop=0
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
@@ -676,7 +738,7 @@ UNR=D:/Github/PinballProject/Pinball/Content/Maps
 BRUSH=D:/Github/PinballProject/Pinball/Content/
 FBX=D:/Github/PinballProject/Pinball/Content/
 FBXAnim=D:/Github/PinballProject/Pinball/Content/
-GenericImport=D:/Github/PinballProject/Pinball/Content/
+GenericImport=E:/Tutorial/Unreal Tutorial/Unreal Engine 4 How to Develop Your First Two Games/02 Developing a game of Pinball/PinballAssets/PinballAssets/SM_BracketTop.FBX
 GenericExport=D:/Github/PinballProject/Pinball/Content/
 GenericOpen=D:/Github/PinballProject/Pinball/Content/
 GenericSave=D:/Github/PinballProject/Pinball/Content/
@@ -1238,5 +1300,95 @@ BlueprintGraph.TimeStamp=2017.12.17-06.17.19
 BlueprintGraph.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2017.12.17-06.18.57
 MovieSceneCapture.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2017.12.17-06.19.54
+StaticMeshEditor.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2017.12.17-06.18.21
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
+
+[/Script/UnrealEd.FbxImportUI]
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=False
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+bKeepOverlappingVertices=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+bImportCustomAttribute=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[MessageLog]
+LastLogListing=FBXImport
+
+[DetailCategoriesAdvanced]
+PhysicsConstraintComponent.Angular Limits=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Physics=True
+
+[PlacementMode]
+RecentlyPlaced=/Game/Blueprints/GameObjects/Spinner_BP.Spinner_BP;
 
 
