035 Pinball - Force Direction Volumes

--- a/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -126,16 +126,14 @@ TcpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings.Charge Plunger,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,PhysicsSettings.Physical Surface.PhysicalSurfaceList,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings.Charge Plunger,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,PhysicsSettings.Physical Surface.PhysicalSurfaceList,
 PhysicsConstraintComponent=PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,
+BoxComponent=BoxComponent.Collision.Collision,
 
 [EditorStartup]
 LastLevel=/Game/Maps/Main_Map
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Assets/StaticMesh/SM_LBracket.SM_LBracket
-OpenAssetsAtExit=/Game/Assets/StaticMesh/SM_SpinnerTile.SM_SpinnerTile
-OpenAssetsAtExit=/Game/Blueprints/GameObjects/Spinner_BP.Spinner_BP
-OpenAssetsAtExit=/Game/Blueprints/GameObjects/BallSphere_BP.BallSphere_BP
+OpenAssetsAtExit=/Game/Blueprints/GameObjects/ForceMovementZone_BP.ForceMovementZone_BP
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -633,6 +631,27 @@ Brush.BrushSettings=True
 Brush.Actor=True
 LightmassPrimitiveSettingsObject.Lightmass=True
 BallSphere_BP_C.TransformCommon=True
+ForceMovementZone_BP_C.Tick=True
+ForceMovementZone_BP_C.Rendering=True
+ForceMovementZone_BP_C.Replication=True
+ForceMovementZone_BP_C.Input=True
+ForceMovementZone_BP_C.Actor=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+ForceMovementZone_BP_C.TransformCommon=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+ForceMovementZone_BP_C.Default=True
 
 [DetailPropertyExpansion]
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" "
@@ -1387,8 +1406,13 @@ LastLogListing=FBXImport
 PhysicsConstraintComponent.Angular Limits=True
 StaticMeshComponent.Collision=True
 StaticMeshComponent.Physics=True
+BoxComponent.Collision=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/GameObjects/ForceMovementZone_BP.ForceMovementZone_BP;
 RecentlyPlaced=/Game/Blueprints/GameObjects/Spinner_BP.Spinner_BP;
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
 
 
