038 Pinball - Adding Decals Part 1

--- a/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -52,7 +52,7 @@ LastExecutedLaunchName=DESKTOP-1B1B2UP
 LastExecutedPIEPreviewDevice=
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
-bInvertMouseLookYAxis=True
+bInvertMouseLookYAxis=False
 bInvertOrbitYAxis=False
 bInvertMiddleMousePan=True
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -128,14 +128,20 @@ UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,Input
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings.Charge Plunger,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,PhysicsSettings.Physical Surface.PhysicalSurfaceList,InputSettings.Bindings.ActionMappings.LeftTilt,InputSettings.Bindings.ActionMappings.RightTilt,
 PhysicsConstraintComponent=PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,
 BoxComponent=BoxComponent.Collision.Collision,
-PostProcessVolume=PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Auto ExposureAdvanced,PostProcessVolume.Lens.Lens|Auto Exposure,PostProcessVolume.Lens.Lens|Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Global Illumination,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Light Propagation Volume,PostProcessVolume.Rendering Features.Rendering Features|Screen Space Reflections,PostProcessVolume.Rendering Features.Rendering Features|Misc,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Color Grading.Color Grading|WhiteBalance,PostProcessVolume.Lens.Lens|Image Effects,
+PostProcessVolume=PostProcessVolume.Color Grading.Color Grading
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Static Component Mask Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Static Component Mask Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,
 
 [EditorStartup]
 LastLevel=/Game/Maps/Main_Map
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Assets/Material/TableTop_Material.TableTop_Material
+OpenAssetsAtExit=/Game/Assets/Material/BasicDecal_Material.BasicDecal_Material
+OpenAssetsAtExit=/Game/Assets/Material/BasicDecal_StraightArrow_Material_Inst.BasicDecal_StraightArrow_Material_Inst
+OpenAssetsAtExit=/Game/Assets/Material/BasicDecal_CurvedArrows_Material_Inst.BasicDecal_CurvedArrows_Material_Inst
+OpenAssetsAtExit=/Game/Assets/Material/BasicDecal_TechEdge_Material_Inst.BasicDecal_TechEdge_Material_Inst
+OpenAssetsAtExit=/Game/Assets/Material/BasicDecal_Stripes_Material_Inst.BasicDecal_Stripes_Material_Inst
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -799,6 +805,38 @@ MaterialExpressionConstant.MaterialExpression=True
 MaterialExpressionReroute.MaterialExpression=True
 MaterialExpressionComment.MaterialExpressionComment=True
 MaterialExpressionComment.MaterialExpression=True
+Generic.Surface Materials=True
+Generic.Geometry=True
+Generic.Surface Properties=True
+BallResetZone_BP_C.TransformCommon=True
+BallResetZone_BP_C.Rendering=True
+BallResetZone_BP_C.Input=True
+BallResetZone_BP_C.Actor=True
+Texture2D.Compression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
+MaterialExpressionStaticComponentMaskParameter.General=True
+MaterialExpressionStaticComponentMaskParameter.MaterialExpressionStaticComponentMaskParameter=True
+MaterialExpressionStaticComponentMaskParameter.MaterialExpression=True
+DecalActor.TransformCommon=True
+DecalActor.Decal=True
+DecalActor.Rendering=True
+DecalActor.Tags=True
+DecalActor.Cooking=True
+MaterialExpressionPower.MaterialExpressionPower=True
+MaterialExpressionPower.MaterialExpression=True
+MaterialExpressionClamp.MaterialExpressionClamp=True
+MaterialExpressionClamp.MaterialExpression=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+MaterialExpressionTextureSampleParameter2D.General=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSampleParameter2D.MaterialExpression=True
 
 [DetailPropertyExpansion]
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" "
@@ -851,6 +889,8 @@ Volume="\"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.Po
 /Game/Blueprints/TiltShake_BP.TiltShake_BP=0
 /Game/Assets/StaticMesh/BallSphere_StaticMesh.BallSphere_StaticMesh=1
 /Game/Blueprints/GameObjects/BallSphere_BP.BallSphere_BP=1
+/Game/Assets/Textures/T_DecalPack_01.T_DecalPack_01=1
+/Game/Assets/Textures/T_DecalPack_02.T_DecalPack_02=1
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
@@ -913,7 +953,7 @@ UNR=D:/Github/PinballProject/Pinball/Content/Maps
 BRUSH=D:/Github/PinballProject/Pinball/Content/
 FBX=D:/Github/PinballProject/Pinball/Content/
 FBXAnim=D:/Github/PinballProject/Pinball/Content/
-GenericImport=E:/Tutorial/Unreal Tutorial/Unreal Engine 4 How to Develop Your First Two Games/02 Developing a game of Pinball/PinballAssets/PinballAssets/Textures/T_Fibers.tga
+GenericImport=E:/Tutorial/Unreal Tutorial/Unreal Engine 4 How to Develop Your First Two Games/02 Developing a game of Pinball/PinballAssets/PinballAssets/Textures/T_DecalPack_01.tga
 GenericExport=D:/Github/PinballProject/Pinball/Content/
 GenericOpen=D:/Github/PinballProject/Pinball/Content/
 GenericSave=D:/Github/PinballProject/Pinball/Content/
@@ -1481,6 +1521,8 @@ HierarchicalLODUtilities.TimeStamp=2017.12.17-06.18.21
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 MaterialEditor.TimeStamp=2017.12.17-06.18.47
 MaterialEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2017.12.17-06.19.57
+TextureEditor.LastCompileMethod=Unknown
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1569,6 +1611,9 @@ BoxComponent.Collision=True
 CameraActor.CameraSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.DecalActor;/Engine/Transient.ActorFactoryDeferredDecal_0
+RecentlyPlaced=/Game/Assets/Material/BasicDecal_CurvedArrows_Material_Inst.BasicDecal_CurvedArrows_Material_Inst;
+RecentlyPlaced=/Game/Assets/Material/PlasticSimple_White_Material_Inst.PlasticSimple_White_Material_Inst;
 RecentlyPlaced=/Game/Assets/Material/TableTop_Material.TableTop_Material;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Game/Blueprints/GameObjects/BallSphere_BP.BallSphere_BP;
@@ -1578,6 +1623,7 @@ RecentlyPlaced=/Game/Blueprints/GameObjects/Spinner_BP.Spinner_BP;
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
+Warning_NoPreviewMeshFound=False
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -1587,6 +1633,12 @@ bShowMobileStats=False
 PreserveScaleRatio=True
 
 [MaterialEditor]
-PrimType=2
+PrimType=3
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
+bWantsMobileStats=False
 
 
