040 Pinball - UI Animations and Final Touches

--- a/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,6 +50,8 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-1B1B2UP
 LastExecutedLaunchName=DESKTOP-1B1B2UP
 LastExecutedPIEPreviewDevice=
+NewWindowPosition=(X=315,Y=148)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -143,6 +145,7 @@ LastLevel=/Game/Maps/Main_Map
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Widgets/MainMenu_WidgetBP.MainMenu_WidgetBP
 
 [DetailCategories]
 DecalActor.TransformCommon=True
@@ -529,6 +532,66 @@ DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
 DirectionalLight.LOD=True
 DirectionalLight.HLOD=True
+Primary_Camera_C.TransformCommon=True
+Primary_Camera_C.CameraSettings=True
+Primary_Camera_C.Color Grading=True
+Primary_Camera_C.Tonemapper=True
+Primary_Camera_C.Mobile Tonemapper=True
+Primary_Camera_C.Lens=True
+Primary_Camera_C.Rendering Features=True
+Primary_Camera_C.Default=True
+Primary_Camera_C.AutoPlayerActivation=True
+Primary_Camera_C.Tags=True
+Primary_Camera_C.Activation=True
+Primary_Camera_C.Cooking=True
+Primary_Camera_C.Actor=True
+Image.Layout=True
+Image.Appearance=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Events=True
+ScaleBox.Layout=True
+ScaleBox.Stretching=True
+ScaleBox.Performance=True
+ScaleBox.Behavior=True
+ScaleBox.Render Transform=True
+ScaleBox.Clipping=True
+ScaleBox.Navigation=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+CanvasPanel.Behavior=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Events=True
+ObjectProperty.Variable=True
+ObjectProperty.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
 
 [MessageLog]
 LastLogListing=PIE
@@ -566,16 +629,28 @@ UserInterfaceSettings="\"Object.DPI Scaling.UIScaleCurve\" "
 ClassViewerProjectSettings="\"Object.ClassVisibilityManagement.InternalOnlyPaths\" \"Object.ClassVisibilityManagement.InternalOnlyClasses\" "
 UMGEditorProjectSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[0].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[1].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[2].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[3].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[4].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[5].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[6].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[7].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[8].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[9].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[10].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[11].Color\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" \"Object.Designer.DebugResolutions.DebugResolutions[12].Color\" "
 AndroidRuntimeSettings="\"Object.AdvancedAPKPackaging.GoogleVRCaps\" "
+Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" "
+ScaleBox="\"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" "
+CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextBlock="\"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/UI/T_PinballLogo.T_PinballLogo=0
 /Game/Assets/Material/AdvancedDecal_Material.AdvancedDecal_Material=0
+/Game/Assets/UI/T_BackPlateImage.T_BackPlateImage=0
 
 [MaterialEditor]
 PrimType=1
 
 [DetailCategoriesAdvanced]
 DirectionalLight.CascadedShadowMaps=True
+Texture2D.Compression=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
@@ -606,12 +681,14 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Assets/UI
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Widgets
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [Directories2]
 UNR=D:/Github/PinballProject/Pinball/Content/Maps
@@ -1184,5 +1261,71 @@ UATHelper.TimeStamp=2017.12.17-06.20.01
 UATHelper.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2017.12.17-06.18.57
 MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2017.12.17-06.17.19
+BlueprintGraph.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2017.12.17-06.19.38
+SequencerWidgets.LastCompileMethod=Unknown
+
+[WidgetTemplatesExpanded]
+Extra=False
+Input=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Uncategorized=False
+User Created=False
+
+[UMGEditor.Designer]
+PreviewWidth=1920
+PreviewHeight=1080
+PreviewAspectRatio=16:9
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+bKeyAllEnabled=False
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowFrameNumbers=True
+bShowRangeSlider=False
+bIsSnapEnabled=False
+TimeSnapIntervalMode=STSI_Custom
+CustomTimeSnapInterval=0.050000
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bLabelBrowserVisible=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bShowCurveEditorCurveToolTips=True
+bLinkCurveEditorTimeRange=False
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowViewportTransportControls=True
+bLockPlaybackToAudioClock=False
+bAllowPossessionOfPIEViewports=False
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=False
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+TrajectoryPathCap=250
 
 
